<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_popup"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectProfilePhoto"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gallery"
            android:background="@color/colorPurple"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"/>
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">
        </View>
        <Button
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/camera"
            android:background="@color/colorPurple"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>