<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/watermark_2">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.metreat.imageLoading.ImageViewRounded
        android:id="@+id/iv_update_photo"
        android:layout_width="@dimen/image_rounded"
        android:layout_height="@dimen/image_rounded"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/profile"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/iv_update_photo"
        android:layout_centerHorizontal="true"
        android:padding="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:padding="@dimen/default_padding_half"
                android:text="@string/name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:padding="@dimen/default_padding"
                android:text=":"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text=""
                android:singleLine="true"
                android:padding="@dimen/default_padding_half"
                android:textSize="@dimen/normal_text_minus"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/login_textcolor_hint">
        </View>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:padding="@dimen/default_padding_half"
                android:text="@string/emailAddress"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:padding="@dimen/default_padding"
                android:text=":"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:id="@+id/tv_emai_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text=""
                android:singleLine="true"
                android:padding="@dimen/default_padding_half"
                android:textSize="@dimen/normal_text_minus"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/login_textcolor_hint">
        </View>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:padding="@dimen/default_padding_half"
                android:text="@string/mobileNo"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:padding="@dimen/default_padding"
                android:text=":"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:id="@+id/tvMobileNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text=""
                android:singleLine="true"
                android:padding="@dimen/default_padding_half"
                android:textSize="@dimen/normal_text_minus"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/login_textcolor_hint">
        </View>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:padding="@dimen/default_padding_half"
                android:text="@string/dateOfBirth"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:padding="@dimen/default_padding"
                android:text=":"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:id="@+id/tv_dob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text=""
                android:singleLine="true"
                android:padding="@dimen/default_padding_half"
                android:textSize="@dimen/normal_text_minus"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/login_textcolor_hint">
        </View>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:padding="@dimen/default_padding_half"
                android:text="@string/event"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:padding="@dimen/default_padding"
                android:text=":"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:id="@+id/tvEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text=""
                android:singleLine="true"
                android:padding="@dimen/default_padding_half"
                android:textSize="@dimen/normal_text_minus"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/login_textcolor_hint">
        </View>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:padding="@dimen/default_padding_half"
                android:text="@string/dateOfEvent"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:padding="@dimen/default_padding"
                android:text=":"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:id="@+id/tvEventDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text=""
                android:singleLine="true"
                android:padding="@dimen/default_padding_half"
                android:textSize="@dimen/normal_text_minus"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/login_textcolor_hint">
        </View>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:padding="@dimen/default_padding_half"
                android:text="@string/ProfileAdress"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:padding="@dimen/default_padding"
                android:text=":"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text=""
                android:padding="@dimen/default_padding_half"
                android:textSize="@dimen/normal_text_minus"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateProfile"
            android:layout_marginTop="@dimen/default_margin_triple"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPurple"
            android:textSize="@dimen/normal_text"/>

    </LinearLayout>
    </RelativeLayout>
    </ScrollView>

</RelativeLayout>